# opti-sort

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  package.xml
config/: bock_config.yaml  efk_bock.yaml
docs/FlexiBowl 500/V+ Library/: FBMOD203.V2
documentation/: JetsonTX2_J26_header.ods
launch/: bock_controller.launch  bock_demo_square.launch  bock_display.launch  bock_navigation.launch  bock_odom_filtered.launch  bock_pose.launch
msg/: BockStatus.msg
rviz/: display.rviz
samples/Calibration dataset/Basler/: scA1300-32gm_21413008.pfs
samples/IDS/: settings.ini
src/: ScaraTargetsFakePublisher.py  basler_test.py  can_read.py  can_write.py  controlbox_tf.py  demo_square.py  demo_square_2.py  feature_recognition.py  ids_test.py  luxonis_test.py  mattro_odom.py  mattro_tf.py  mqtt-opencv-publisher.py  odom_tf.py  pozyx_read.py
src/Cameras/: CamerasManager.py  main_CamerasManager.py  test_FakeCoordinatePublisher.py  test_FeatureRecognition.py
src/JointReader/: JointReader.csproj  JointReader.sln  Program.cs  packages.config
src/OptiSort/: OptiSort.sln
src/OptiSort/HMI/: HMI.cs  (+20 more)
src/not_working/: can_write.py  diff_tf.py  pub_odom_tf.py
src/python/: requirements.txt
src/tlc/: FakePublisher.py
src/utils/: can_write_old.py  hex2dec.py  mattro_bock.py  ros_command_line_example.txt  ros_setup.sh  test_back_forth.py  test_publisher.py  test_rotate.py  test_rotate_pid.py  test_speed.py  test_subscriber.py  world_tf.py
src/videoStream/: Form1.Designer.cs  Form1.cs  Program.cs  videoStream.sln
urdf/: Box_400x500x200.stl  Mattro_heavy_duty.urdf
(+121 files in other folders)
